--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^14.2.4",
     "@angular/platform-browser-dynamic": "^14.2.4",
     "@angular/router": "^14.2.4",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
     "finnhub": "^1.2.15",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.0",
